# libssh_adaption_for_moonbit

./: .gitignore  README.md
openssh_adaption/: .gitignore  moon.mod.json  setup.ps1
openssh_adaption/src/ffi/: c_stub.c  moon.pkg  raw.mbt  types.mbt
openssh_adaption/src/main/: main.mbt  moon.pkg.json.template
openssh_adaption/src/ssh/: channel.mbt  channel_test.mbt  error.mbt  moon.pkg  port_forward.mbt  session.mbt  session_test.mbt  sftp.mbt  sftp_test.mbt
ssh_client/: CMakeLists.txt  CMakePresets.json  main.cpp
